# randMagicSquare

./: Cargo.toml  README.md  license
src/: lib.rs
tests/: t_square.rs
