[package]
name = "square"
version = "0.1.0"
authors = ["keeper"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = { git = "http://github.com/HarrisonMc555/array2d" }
rand = { git = "https://github.com/rust-random/rand" }
